--- a/public/css/zenska-style.css
+++ b/public/css/zenska-style.css
@@ -1,5 +1,5 @@
 .mainPanel{
-    padding: 50px;
+    padding: 30px;
 }
 
 .mainPanel a{
@@ -8,7 +8,7 @@
 }
 
 .secondgroup{
-    margin-top: 75px;
+    margin-top: 50px;
 }
 
 
@@ -45,9 +45,16 @@
     border-bottom-right-radius: 6px;
 }
 
-#ncb{
+/* centered columns styles */
+.row-centered {
+    text-align:center;
+}
+
+.col-centered {
     display:inline-block;
-    padding-left:0;
-    margin:20px 0;
-    border-radius:4px
+    float:none;
+    /* reset the text-align */
+    text-align:left;
+    /* inline-block space fix */
+    margin-right:-4px;
 }
