--- a/public/css/zenska-style.css
+++ b/public/css/zenska-style.css
@@ -1,5 +1,114 @@
 body {
     background-color: #3c3c3c;
+    font-family: "latosemibold", Helvetica, Arial, sans-serif;
+}
+
+@font-face {
+    font-family: 'latoblack';
+    src: url('../fonts/Lato/lato-black-webfont.eot');
+    src: url('../fonts/Lato/lato-black-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Lato/lato-black-webfont.woff2') format('woff2'),
+    url('../fonts/Lato/lato-black-webfont.woff') format('woff'),
+    url('../fonts/Lato/lato-black-webfont.ttf') format('truetype'),
+    url('../fonts/Lato/lato-black-webfont.svg#latothin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'latobold';
+    src: url('../fonts/Lato/lato-bold-webfont.eot');
+    src: url('../fonts/Lato/lato-bold-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Lato/lato-bold-webfont.woff2') format('woff2'),
+    url('../fonts/Lato/lato-bold-webfont.woff') format('woff'),
+    url('../fonts/Lato/lato-bold-webfont.ttf') format('truetype'),
+    url('../fonts/Lato/lato-bold-webfont.svg#latothin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'latohairline';
+    src: url('../fonts/Lato/lato-hairline-webfont.eot');
+    src: url('../fonts/Lato/lato-hairline-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Lato/lato-hairline-webfont.woff2') format('woff2'),
+    url('../fonts/Lato/lato-hairline-webfont.woff') format('woff'),
+    url('../fonts/Lato/lato-hairline-webfont.ttf') format('truetype'),
+    url('../fonts/Lato/lato-hairline-webfont.svg#latothin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'latoheavy';
+    src: url('../fonts/Lato/lato-heavy-webfont.eot');
+    src: url('../fonts/Lato/lato-heavy-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Lato/lato-heavy-webfont.woff2') format('woff2'),
+    url('../fonts/Lato/lato-heavy-webfont.woff') format('woff'),
+    url('../fonts/Lato/lato-heavy-webfont.ttf') format('truetype'),
+    url('../fonts/Lato/lato-heavy-webfont.svg#latothin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'latolight';
+    src: url('../fonts/Lato/lato-light-webfont.eot');
+    src: url('../fonts/Lato/lato-light-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Lato/lato-light-webfont.woff2') format('woff2'),
+    url('../fonts/Lato/lato-light-webfont.woff') format('woff'),
+    url('../fonts/Lato/lato-light-webfont.ttf') format('truetype'),
+    url('../fonts/Lato/lato-light-webfont.svg#latothin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'latomedium';
+    src: url('../fonts/Lato/lato-medium-webfont.eot');
+    src: url('../fonts/Lato/lato-medium-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Lato/lato-medium-webfont.woff2') format('woff2'),
+    url('../fonts/Lato/lato-medium-webfont.woff') format('woff'),
+    url('../fonts/Lato/lato-medium-webfont.ttf') format('truetype'),
+    url('../fonts/Lato/lato-medium-webfont.svg#latothin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'latoregular';
+    src: url('../fonts/Lato/lato-regular-webfont.eot');
+    src: url('../fonts/Lato/lato-regular-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Lato/lato-regular-webfont.woff2') format('woff2'),
+    url('../fonts/Lato/lato-regular-webfont.woff') format('woff'),
+    url('../fonts/Lato/lato-regular-webfont.ttf') format('truetype'),
+    url('../fonts/Lato/lato-regular-webfont.svg#latothin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'latosemibold';
+    src: url('../fonts/Lato/lato-semibold-webfont.eot');
+    src: url('../fonts/Lato/lato-semibold-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Lato/lato-semibold-webfont.woff2') format('woff2'),
+    url('../fonts/Lato/lato-semibold-webfont.woff') format('woff'),
+    url('../fonts/Lato/lato-semibold-webfont.ttf') format('truetype'),
+    url('../fonts/Lato/lato-semibold-webfont.svg#latothin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'latothin';
+    src: url('../fonts/Lato/lato-thin-webfont.eot');
+    src: url('../fonts/Lato/lato-thin-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Lato/lato-thin-webfont.woff2') format('woff2'),
+    url('../fonts/Lato/lato-thin-webfont.woff') format('woff'),
+    url('../fonts/Lato/lato-thin-webfont.ttf') format('truetype'),
+    url('../fonts/Lato/lato-thin-webfont.svg#latothin') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 .mainDiv {
@@ -43,6 +152,9 @@ table {
     background-color: mediumpurple;
     padding: 15px 5px;
     border-radius: 10px;
+    color: white;
+    text-shadow: black 5px 5px 25px;
+    border: solid #ddd 1px;
 }
 
 .buttons-box {
@@ -63,6 +175,13 @@ table {
 .table-curved td, .table-curved th {
     border-left: 1px solid #ddd;
     border-top: 1px solid #ddd;
+    color: white;
+    text-shadow: black 5px 5px 25px;
+}
+
+.table-curved tbody td a {
+    color: #afd9ee;
+    text-shadow: black 5px 5px 25px;
 }
 
 .table-curved > :first-child > :first-child > :first-child {
